# song

./: Cargo.toml  justfile
apps/player/: Cargo.toml  Dioxus.toml  build.rs  classes.rs  justfile
apps/player/assets/css/: tailwind.css
apps/player/assets/tabs/: anne.ron  anne.rs
apps/player/assets/weather/: weather.srt
apps/player/css/: Cargo.toml  build.rs  classes.html  classes.rs  justfile  package-lock.json  package.json
apps/player/src/: lib.rs  main.rs
apps/player/src/app/: mod.rs  model.rs  route.rs
apps/player/src/pages/: home.rs  mod.rs  tab.rs
apps/player/src/views/: bar.rs  bar_lane.rs  bars.rs  lyrics.rs  mod.rs  section.rs  sections.rs  video.rs  waveform.rs  wavesurfer.rs
apps/player/src/views/entries/: chord.rs  lyric.rs  mod.rs  word.rs
apps/player/src/views/lanes/: chord.rs  lyrics.rs  mod.rs
docs/: bun.lockb  devbox.json  justfile  package.json
docs/src/content/docs/guides/: example.md
proto/: Cargo.toml
proto/src/: lib.rs  tab.rs
