[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/dioxus-class"
repository = "https://github.com/edger-dev/dioxus-class"
authors = ["YJ Park <yjpark@gmail.com>"]

[workspace]
members = [
    "proto",
    "apps/player",
]

resolver = "2"

[workspace.dependencies]
song_proto = { path = "proto" }

dioxus = "0.5.0"
dioxus-daisyui = "0.6.0"

notation_model = "0.6.0"

serde = "1.0"

fehler = "1.0"
lazy_static = "1.4.0"
simsearch = "0.2.4"

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
