[package]
name = "song_player"
version = "0.1.0"
publish = false

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]

default = [
    "web",
]

web = [
    "dioxus/web",
    "dioxus/router",
]

build-classes = [
    "dioxus-daisyui/build-classes",
]

[build-dependencies]
dioxus-daisyui = { workspace = true }

[dependencies]
song_proto = { workspace = true }

dioxus = { workspace = true }
dioxus-daisyui = { workspace = true }

reqwest = { workspace = true }
async-recursion = { workspace = true }
futures = { workspace = true }

dioxus-free-icons = { workspace = true }

getrandom = { workspace = true }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
